@@ -11,7 +11,8 @@ WriteMakefile(
         "Date::Manip"   => 0,
         "Mail::Address" => 0,
         "DBI"           => 0,
-        "DBD::Pg"       => 0
+        "DBD::Pg"       => 0,
+        Lingua::EN::Keywords => 0
         }, # e.g., Module::Name => 1.1
     ($] >= 5.005 ?    ## Add these new keywords supported since 5.005
       (ABSTRACT_FROM => 'Miner.pm', # retrieve abstract from module
