@@ -1,3 +1,7 @@
+2002-09-01 19:10  simon
+
+	* Makefile.PL, Miner.pm: Fix dependency bug (RT#1419)
+
 2002-08-24 16:18  simon
 
 	* MANIFEST, Miner.pm, README, mm, Miner/Message.pm,
